editing the css ref

--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Your Name — Online Resume</title>
   <meta name="description" content="Online resume of Your Name: experience, education, and skills." />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <header class="site-header container">
     <div class="identity">
       <img class="headshot" src="images/headshot.jpg" alt="Headshot of Your Name" />
       <div class="identity-text">
-        <h1 class="name" id="top">Your Name</h1>
+        <h1 class="name" id="top">Yifei</h1>
         <p class="tagline">Full-Stack / Cloud • Dublin, Ireland</p>
         <ul class="contacts">
-          <li><a href="mailto:you@example.com">you@example.com</a></li>
-          <li><a href="tel:+353850000000">+353 85 000 0000</a></li>
+          <li><a href="mailto:you@example.com">yifei.alpha@gmail.com
+
+          </a></li>
+          <li><a href="tel:+353850000000">+353 87 1954866</a></li>
           <li><a href="https://www.linkedin.com/in/yourname" target="_blank" rel="noreferrer">LinkedIn</a></li>
           <li><a href="https://github.com/yourname" target="_blank" rel="noreferrer">GitHub</a></li>
           <li><span>Dublin, Ireland</span></li>
