--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Name — Online Resume</title>
+  <title>My Resume</title>
   <meta name="description" content="Online resume of Your Name: experience, education, and skills." />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <header class="site-header container">
     <div class="identity">
-      <img class="headshot" src="images/headshot.jpg" alt="Headshot of Your Name" />
+      <img class="headshot" src="./images/headshot.jpg" alt="Headshot" />
       <div class="identity-text">
         <h1 class="name" id="top">Yifei</h1>
         <p class="tagline">Full-Stack / Cloud • Dublin, Ireland</p>
