final commit before AWS S3

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <h1 class="name" id="top">Yifei</h1>
         <p class="tagline">Full-Stack / Cloud • Dublin, Ireland</p>
         <ul class="contacts">
-          <li><a href="mailto:you@example.com">yifei.alpha@gmail.com
-
-          </a></li>
+          <li><a href="mailto:you@example.com">yifei.alpha@gmail.com</a></li>
           <li><a href="tel:+353850000000">+353 87 1954866</a></li>
           <li><a href="https://www.linkedin.com/in/yourname" target="_blank" rel="noreferrer">LinkedIn</a></li>
           <li><a href="https://github.com/yourname" target="_blank" rel="noreferrer">GitHub</a></li>
