--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>My Resume</title>
   <meta name="description" content="Online resume of Your Name: experience, education, and skills." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Montserrat:wght@500;600;700&family=Sacramento&display=swap"
+    rel="stylesheet"
+  />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <header class="site-header container">
+    <div class="cloud cloud-one" aria-hidden="true"></div>
+    <div class="cloud cloud-two" aria-hidden="true"></div>
+    <div class="cloud cloud-three" aria-hidden="true"></div>
     <div class="identity">
       <img class="headshot" src="./images/headshot.jpg" alt="Headshot" />
       <div class="identity-text">
         <h1 class="name" id="top">Yifei</h1>
         <p class="tagline">Full-Stack / Cloud • Dublin, Ireland</p>
         <ul class="contacts">
-          <li><a href="mailto:you@example.com">yifei.alpha@gmail.com</a></li>
+          <li><a href="mailto:you@example.com">Email</a></li>
           <li><a href="tel:+353850000000">+353 87 1954866</a></li>
           <li><a href="https://www.linkedin.com/in/yourname" target="_blank" rel="noreferrer">LinkedIn</a></li>
           <li><a href="https://github.com/yourname" target="_blank" rel="noreferrer">GitHub</a></li>
@@ -46,18 +55,6 @@
     <section class="card" id="experience" aria-labelledby="experience-title">
       <div class="section-head">
         <h2 id="experience-title">Employment History</h2>
-        <div class="filters" role="group" aria-label="Timeline filters">
-          <label>
-            From
-            <input type="number" id="from-year" inputmode="numeric" placeholder="2019" min="1900" max="2099" />
-          </label>
-          <label>
-            To
-            <input type="number" id="to-year" inputmode="numeric" placeholder="2025" min="1900" max="2099" />
-          </label>
-          <button class="btn" id="apply-filter" type="button">Apply</button>
-          <button class="btn ghost" id="clear-filter" type="button">Clear</button>
-        </div>
       </div>
 
       <!-- Timeline (interactive) -->
